# CommHelper

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.03c1a46  Main.qml  README.md  linkconfig.cpp  linkconfig.h  linkinterface.cpp  linkinterface.h  linktcp.cpp  linktcp.h  linkudp.cpp  linkudp.h  main.cpp
.github/workflows/: windows.yml
cmake-in/: InstallerScript.iss.in  translations.qrc.in  version.h.in  version_exe.rc.in
cmakeconf/: GetGitRevisionDescription.cmake  Windeployqt.cmake  building_output.cmake  carete_qm_update_ts.cmake
tools/: CMakeLists.txt  tilogger.cpp  tilogger.h
workflows/action-cli/: InstallerScript.iss  build2exe_copy_yjwc-local-winserver.bat  iss2exe_and_copy2local-winserver.bat
